syntax = "proto3";

package client;

message DataRequest {
    bytes csv_content = 1;
}

message DataResponse {
    repeated double x_train = 1;
    repeated double x_test = 2;
    repeated double y_train = 3;
    repeated double y_test = 4;
    repeated string dates_train = 5;
    repeated string dates_test = 6;
}

service DataService {
    rpc CleanData (DataRequest) returns (DataResponse);
}

message TrainRequest {
    repeated double x_train = 1;
    repeated double y_train = 2;
}

message TrainResponse {
    bytes model = 1;
}

service TrainingService {
    rpc TrainModel (TrainRequest) returns (TrainResponse);
}

message TestRequest {
    bytes model = 1;
    repeated double x_test = 2;
    repeated double y_test = 3;
    repeated string dates_test = 4;
}

message TestResponse {
    double rmse = 1;
    bytes plot = 2;
}

service TestingService {
    rpc TestModel (TestRequest) returns (TestResponse);
}
